# epub2md

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  epub2md.sh  pyproject.toml  requirements.txt
epub2md/: __init__.py  __main__.py  cli.py  converter.py
epub2md/processors/: __init__.py  cleanup.py  images.py  metadata.py
epub2md/utils/: __init__.py  logging_utils.py
examples/: README.md
tests/: __init__.py  test_cleanup.py
